<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dilaog_background" >

    <RelativeLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/dialog_height"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/dialog_bg" >

        <RelativeLayout
            android:id="@+id/title_bar_view"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/titlebar_height"
            android:background="@drawable/actionbar" >

            <com.labs.jangkriek.animalpuzzle.CustomTitleTextview
                android:id="@+id/title_textview"
                style="@style/DialogTitleTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_item_height"
            android:layout_below="@id/title_bar_view"
            android:layout_marginLeft="@dimen/view_left_right_padding"
            android:layout_marginRight="@dimen/view_left_right_padding"
            android:paddingLeft="@dimen/view_left_right_padding"
            android:paddingRight="@dimen/view_left_right_padding" >

            <com.labs.jangkriek.animalpuzzle.CustomTitleTextview
			  style="@style/DialogMenuTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/first_location" />

            <RadioButton
                android:id="@+id/first_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@id/first"
            android:layout_marginLeft="@dimen/view_left_right_padding"
            android:layout_marginRight="@dimen/view_left_right_padding"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_item_height"
            android:layout_below="@id/divider1"
            android:layout_marginLeft="@dimen/view_left_right_padding"
            android:layout_marginRight="@dimen/view_left_right_padding"
            android:paddingLeft="@dimen/view_left_right_padding"
            android:paddingRight="@dimen/view_left_right_padding" >

            <com.labs.jangkriek.animalpuzzle.CustomTitleTextview
			  style="@style/DialogMenuTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/last_location" />

            <RadioButton
                android:id="@+id/last_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@id/last"
            android:layout_marginLeft="@dimen/view_left_right_padding"
            android:layout_marginRight="@dimen/view_left_right_padding"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/random"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_item_height"
            android:layout_below="@id/divider2"
            android:layout_marginLeft="@dimen/view_left_right_padding"
            android:layout_marginRight="@dimen/view_left_right_padding"
            android:paddingLeft="@dimen/view_left_right_padding"
            android:paddingRight="@dimen/view_left_right_padding" >

            <com.labs.jangkriek.animalpuzzle.CustomTitleTextview
			  style="@style/DialogMenuTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/random_location" />

            <RadioButton
                android:id="@+id/random_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>